--- a/wasm/editor.html
+++ b/wasm/editor.html
@@ -168,7 +168,7 @@
         };
 
         // Get HTML Elements;
-        let y=document.querySelector("textarea"),w=document.getElementById("res"),q=0;y.value=await(await fetch("introduction.md")).text();
+        let y=document.querySelector("textarea"),w=document.getElementById("res"),q=0;y.value=await(await fetch("./tests/generic.md")).text();
         
         // Function;
         function app()
